kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solar-system
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: solar-system
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
